Sun Jun 11 17:39:18 2000  Brian Gough  <bjg@network-theory.co.uk>

	* gsl.spec (BuildRoot): fixed directory for install, it is now
 	/usr/lib/ instead of /usr/lib/gsl/

Tue Jun  6 20:02:02 2000  Brian Gough  <bjg@network-theory.co.uk>

	* acconfig.h, configure.in: use HAVE_X86LINUX_IEEE_INTEFACE for
 	x86 instead of generic HAVE_LINUX_IEEE_INTEFACE

2000-06-02  Mark Galassi  <rosalia@galassi.org>

	* gsl.spec: added gsl.m4 to the list of files.

	* NEWS: added a mention of gsl.m4.

	* gsl.spec: small changes to fix the installation of doc files.

	* Makefile.am: added some files (like MACHINES, KNOWN-PROBLEMS,
	...) to the distribution.

	* gsl.spec, configure.in, KNOWN-PROBLEMS: upped the version number
	to 0.6.  Also: gsl.spec now installes files like MACHINES,
	KNOWN-PROBLEMS, NEWS,... into the package's %doc file list.

Sun May 28 12:03:36 2000  Brian Gough  <bjg@network-theory.co.uk>

	* gsl/Makefile.am (header-links): use configurable macro variable
 	$(LN_S) instead of explicit "ln -s"

Mon May 15 19:16:31 2000  Brian Gough  <bjg@network-theory.co.uk>

	* added ieee mode setting to all tests, so that they can be run in
	double-precision even on extended precision architectures

2000-05-14  Steve Robbins  <steve@nyongwa.montreal.qc.ca>

	* acconfig.h: 
	* configure.in: look in both <float.h> and /usr/include/float.h,
	to find FP_RND_RN, as some versions of GCC don't copy these
	symbols into the `fixed' header.

Thu May 11 12:47:19 2000  Brian Gough  <bjg@network-theory.co.uk>

	* gsl_math.h (GSL_POSZERO): added macros for IEEE signed zeros, +0
 	and -0. They don't do anything useful yet, but use the macro so
 	that will be possible to work around compilers that don't
 	understand the difference between the constants -0 and +0.

Wed May 10 11:30:15 2000  Brian Gough  <bjg@network-theory.co.uk>

	* gsl_math.h (GSL_POSINF): make use of HUGE_VAL which is actually
 	+Inf when IEEE is available, and can be detected by the NAN being