@@ -65,3 +65,5 @@ functions
   and support for fp-ppclinux.c
 
 * OKUJI Yoshinori <okuji@gnu.org> for a patch for fp-x86linux.c for libc5
+
+* Pablo Bianucci <pbian@pccp.com.ar> for patches to complex matrix/vectors
