@@ -162,5 +162,6 @@ construct (Mostly done).
 
 * Add a vector layer to statistics and ffts, sometime in the future.
 
+* Look at www.vispl.org
 
 
