@@ -164,7 +164,7 @@ FUNCTION (gsl_vector, alloc_row_from_matrix) (TYPE(gsl_matrix) * m,
 			GSL_ENOMEM, 0);
     }
 
-  v->data = m->data + i * m->tda ;
+  v->data = m->data + MULTIPLICITY * i * m->tda ;
   v->size = m->size2;
   v->stride = 1;
   v->block = 0;
@@ -193,7 +193,7 @@ FUNCTION (gsl_vector, alloc_col_from_matrix) (TYPE(gsl_matrix) * m,
 			GSL_ENOMEM, 0);
     }
 
-  v->data = m->data + j ;
+  v->data = m->data + MULTIPLICITY * j ;
   v->size = m->size1;
   v->stride = m->tda;
   v->block = 0;
@@ -218,7 +218,7 @@ FUNCTION (gsl_vector, view_row_from_matrix) (TYPE(gsl_vector) * v,
       GSL_ERROR ("vector already has memory allocated to it", GSL_ENOMEM);
     }
 
-  v->data = m->data + i * m->tda ;
+  v->data = m->data + MULTIPLICITY * i * m->tda ;
   v->size = m->size2;
   v->stride = 1;
 
@@ -242,7 +242,7 @@ FUNCTION (gsl_vector, view_col_from_matrix) (TYPE(gsl_vector) * v,
       GSL_ERROR ("vector already has memory allocated to it", GSL_ENOMEM);
     }
 
-  v->data = m->data + j ;
+  v->data = m->data + MULTIPLICITY * j ;
   v->size = m->size1;
   v->stride = m->tda;
 
@@ -281,7 +281,7 @@ FUNCTION(gsl_matrix, view_from_vector) (TYPE(gsl_matrix) * m,
       GSL_ERROR ("matrix already has memory allocated to it", GSL_ENOMEM);
     }
 
-  m->data = base->data + offset;
+  m->data = base->data + MULTIPLICITY * offset;
   m->size1 = n1;
   m->size2 = n2;
   m->tda = d2;
