@@ -1,3 +1,7 @@
+Sat Jun 17 15:38:30 2000  Brian Gough  <bjg@network-theory.co.uk>
+
+        * fixed up missing MULTIPLICITY factors in various functions 
+
 Sun May 28 12:25:02 2000  Brian Gough  <bjg@network-theory.co.uk>
 
 	* test_complex_source.c (FUNCTION): use binary mode "b" when
